--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,12 +17,17 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Determine version 
+      id: setup 
+      run: |
+        echo ::set-output name=version::${GITHUB_REF/refs\/tags\//}
+
     - name: Build the Docker image
       id: build
       run: |
-        VERSION=${GITHUB_REF/refs\/tags\//}
-        echo ::set-output name=version::$VERSION
         docker build . --file Dockerfile --tag $IMAGE_NAME:$VERSION
+      env:
+        VERSION: ${{ steps.build.setup.version }}
 
     - name: Publish Docker image
       if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
@@ -34,4 +39,4 @@ jobs:
         docker push $IMAGE_ID:$VERSION
         docker push $IMAGE_ID:latest
       env:
-        VERSION: ${{ steps.build.outputs.version }}
+        VERSION: ${{ steps.build.setup.version }}
