--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         docker build . --file Dockerfile --tag $IMAGE_NAME:$VERSION
       env:
-        VERSION: ${{ steps.build.setup.version }}
+        VERSION: ${{ steps.setup.outputs.version }}
 
     - name: Publish Docker image
       if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
@@ -39,4 +39,4 @@ jobs:
         docker push $IMAGE_ID:$VERSION
         docker push $IMAGE_ID:latest
       env:
-        VERSION: ${{ steps.build.setup.version }}
+        VERSION: ${{ steps.setup.outputs.version }}
