--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,26 +17,21 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Determine version 
-      id: setup 
-      run: |
-        echo ::set-output name=version::${GITHUB_REF/refs\/tags\//}
-
     - name: Build the Docker image
       id: build
       run: |
-        docker build . --file Dockerfile --tag $IMAGE_NAME:$VERSION
-      env:
-        VERSION: ${{ steps.setup.outputs.version }}
+        VERSION=${GITHUB_REF/refs\/tags\//}
+        echo ::set-output name=version::$VERSION
+        docker build . --file Dockerfile --tag $IMAGE_NAME:staged
 
     - name: Publish Docker image
       if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
       run: |
         echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
         IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
-        docker tag $IMAGE_NAME:$VERSION $IMAGE_ID:$VERSION
-        docker tag $IMAGE_NAME:$VERSION $IMAGE_ID:latest
+        docker tag $IMAGE_NAME:staged $IMAGE_ID:$VERSION
+        docker tag $IMAGE_NAME:staged $IMAGE_ID:latest
         docker push $IMAGE_ID:$VERSION
         docker push $IMAGE_ID:latest
       env:
-        VERSION: ${{ steps.setup.outputs.version }}
+        VERSION: ${{ steps.build.outputs.version }}
